[workspace]
members = [
    "node",
    "pallets/dao",
    "pallets/dao-assets",
    "pallets/dao-bounties",
    "pallets/dao-collective",
    "pallets/dao-democracy",
    "pallets/dao-eth-governance",
    "pallets/dao-nft-governance",
    "pallets/dao-membership",
    "pallets/dao-treasury",
	"precompiles/dao",
	"precompiles/dao-bounties",
	"precompiles/dao-collective",
	"precompiles/dao-democracy",
	"precompiles/dao-eth-governance",
	"precompiles/dao-membership",
	"precompiles/dao-treasury",
	"primitives/dao",
	"primitives/eth",
    "runtime",
]

[workspace.package]
authors = ["Societal <https://github.com/sctllabs>"]
repository = "https://github.com/sctllabs/societal-node"
homepage = "https://www.sctl.xyz"

[workspace.dependencies]

# Third-party dependencies
array-bytes = "6.0.0"
async-io = "1.3"
async-trait = "0.1"
bs58 = { version = "0.4.0" }
clap = { version = "4.0.9", features = ["derive"] }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
derive_more = "0.99"
flume = "0.10.9"
futures = "0.3.21"
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.4" }
impl-trait-for-tuples = "0.2.2"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = { version = "0.4.17", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
rand = "0.8"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", default-features = false }
serde_json = { version = "1.0.79", default-features = false }
smallvec = "1.10.0"
static_assertions = "1.1.0"

# primitivess
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-authority-discovery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-authorship = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-consensus-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-transaction-storage-proof = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

# frame dependencies
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-asset-tx-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-authority-discovery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-babe = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-bounties = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-child-bounties = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-collective = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-contracts = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-contracts-primitives = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-conviction-voting = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-democracy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-elections-phragmen = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-election-provider-multi-phase = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-indices = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-membership = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-multisig = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-nfts = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-nomination-pools = { version = "1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-nomination-pools-runtime-api = { version = "1.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-offences = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-proxy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-preimage = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-insecure-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-referenda = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-scheduler = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = [ "historical" ], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-society = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-staking-reward-curve = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-treasury = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-uniques = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-utility = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-vesting = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

# Frontier dependencies
# Frontier
fc-cli = { version = "1.0.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fc-consensus = { version = "2.0.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fc-db = { version = "2.0.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fc-mapping-sync = { version = "2.0.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fc-rpc = { version = "2.0.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fc-rpc-core = { version = "1.1.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fp-consensus = { version = "2.0.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fp-dynamic-fee = { version = "1.0.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fp-evm = { git = "https://github.com/sctllabs/frontier", branch = "polkadot-v0.9.41", default-features = false }
fp-rpc = { version = "3.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fp-self-contained = { version = "1.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
fp-storage = { version = "2.0.0-dev", git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-base-fee = { version = "1.0.0", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-dynamic-fee = { version = "4.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-ethereum = { version = "4.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-evm = { version = "6.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-evm-chain-id = { version = "1.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-evm-precompile-blake2 = { version = "2.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier", branch = "polkadot-v0.9.41" }
pallet-evm-precompile-bn128 = { version = "2.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier", branch = "polkadot-v0.9.41" }
pallet-evm-precompile-dispatch = { version = "2.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier", branch = "polkadot-v0.9.41" }
pallet-evm-precompile-modexp = { version = "2.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-evm-precompile-simple = { version = "2.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }
pallet-hotfix-sufficients = { version = "1.0.0-dev", default-features = false, git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41" }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
node-rpc = { version = "3.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
substrate-state-trie-migration-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

# Moonbeam
pallet-evm-precompileset-assets-erc20 = { version = "0.1.0", default-features = false, git = "https://github.com/sctllabs/moonbeam.git", branch = "moonbeam-polkadot-v0.9.41" }
precompile-utils = { version = "0.1.0", default-features = false, git = "https://github.com/sctllabs/moonbeam.git", branch = "moonbeam-polkadot-v0.9.41" }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.41" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.41" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.41" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-client-consensus-aura = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-client-consensus-common = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-client-network = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-client-service = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
pallet-collator-selection = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-pallet-session-benchmarking = {git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false, version = "3.0.0"}
cumulus-pallet-xcm = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-primitives-core = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41" }
cumulus-relay-chain-interface = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41" }
parachain-info = { git = "https://github.com/sctllabs/cumulus.git", branch = "polkadot-v0.9.41", default-features = false }

# Local Dependencies
dao-primitives = { version = "4.0.0-dev", default-features = false, path = "./primitives/dao" }
eth-primitives = { version = "4.0.0-dev", default-features = false, path = "./primitives/eth" }
pallet-dao = { version = "4.0.0-dev", default-features = false, path = "./pallets/dao" }
pallet-dao-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/sctllabs/societal-node", branch = "polkadot-v0.9.41-assets" }
pallet-dao-bounties = { version = "4.0.0-dev", default-features = false, path = "./pallets/dao-bounties" }
pallet-dao-bounties-precompile = { version = "1.0.0-dev", default-features = false, path = "./precompiles/dao-bounties" }
pallet-dao-collective = { version = "4.0.0-dev", default-features = false, path = "./pallets/dao-collective" }
pallet-dao-collective-precompile = { version = "1.0.0-dev", default-features = false, path = "./precompiles/dao-collective" }
pallet-dao-democracy = { version = "4.0.0-dev", default-features = false, path = "./pallets/dao-democracy" }
pallet-dao-democracy-precompile = { version = "1.0.0-dev", default-features = false, path = "./precompiles/dao-democracy" }
pallet-dao-eth-governance = { version = "4.0.0-dev", default-features = false, path = "./pallets/dao-eth-governance" }
pallet-dao-eth-governance-precompile = { version = "1.0.0-dev", default-features = false, path = "./precompiles/dao-eth-governance" }
pallet-dao-membership = { version = "4.0.0-dev", default-features = false, path = "./pallets/dao-membership" }
pallet-dao-membership-precompile = { version = "1.0.0-dev", default-features = false, path = "./precompiles/dao-membership" }
pallet-dao-precompile = { version = "1.0.0-dev", default-features = false, path = "./precompiles/dao" }
pallet-dao-treasury = { version = "4.0.0-dev", default-features = false, path = "./pallets/dao-treasury" }
pallet-dao-treasury-precompile = { version = "1.0.0-dev", default-features = false, path = "./precompiles/dao-treasury" }

# Substrate (client)
sc-authority-discovery = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-consensus-babe-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-consensus-epochs = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-consensus-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-consensus-grandpa-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-network-sync = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-sysinfo = { version = "6.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
substrate-prometheus-endpoint = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

# CLI-specific dependencies
node-inspect = { version = "0.9.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
try-runtime-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

# Build dependencies
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

#runtime = { path = "runtime" }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
